--- a/index.html
+++ b/index.html
@@ -2,53 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
- <link rel="stylesheet" href="index.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="index.css">
+<link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
-  <main>
+   <div class="container">
+    <div class="child" id="one">
+      <img src="/images/icon-sedans.svg" alt="">
+      <h1>SEDANS</h1>
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip
+       <div class="btn" >
+        <button><a href="#" class="color-1">Learn more</a></button>
 
-    <div class="parent">
-      <div class="child" id="first">
-        <img src="images/icon-sedans.svg" alt="">
-        <h1> Sedans</h1>
-        <p>  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-          or on your next road trip.</p>
-        <a href=""><button type="submit" id="first">Learn More</button></a>
-      </div>
-      <div class="child" id="second">
-        <img src="images/icon-suvs.svg" alt="">
-        <h1>  SUVs</h1>
-        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-          and off-road adventures.</p>
-        <a href=""><button type="submit" id="second">Learn More</button></a>
-      </div>
-      <div class="child" id="third">
-        <img src="images/icon-luxury.svg" alt="">
-        <h1>  Luxury</h1>
-        <p>
-          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-          rental and arrive in style.</p>
-        <a href=""><button type="submit" id="third">Learn More</button></a>
-      </div>
-     
+       </div>
     </div>
-
-  </main>
+    <div class="child" id="two">
+      <img src="/images/icon-suvs.svg" alt="">
+      <h1>SUVS</h1>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventiures
+        <div class="btn">
+          <button><a href="#"  class="color-2">Learn more</a></button>
   
- 
-
-
-
+         </div>
+    </div>
+    <div class="child" id="three">
+      <img src="/images/icon-luxury.svg" alt="">
+      <h1>LUXURY</h1>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
+        <div class="btn" >
+          <button><a href="#" class="color-3">Learn more</a></button>
   
-
-
-
+         </div>
+    </div>
+   </div>
 </body>
 </html>
